# inventory-management-system

./: CMakeLists.txt  README.md  barcode_scanner.cpp  bcrypt.cpp  display  invManage.cpp  invManage.h  inventoryManagement.cpp  inventoryManagement.h  item.csv  m  main.cpp  run.sh  user.csv
.cache/clangd/index/: bcrypt.cpp.08B807AAFC7EC361.idx  bcrypt.cpp.B6F62E8DCFA36CE7.idx  bcrypt.h.5D223E9BB2673337.idx  bcrypt.h.886C299160A4E659.idx  blowfish.cpp.610CB9CB33055ACF.idx  blowfish.cpp.F076C2FABAA32436.idx  glfw3.h.ABC423C67E40963D.idx  glfw3.h.CD5A2171CB499001.idx  glfw3native.h.2EDA58FA6E7D7791.idx  glfw3native.h.43EDFBBD38899A91.idx  imconfig.h.103E33CBEB75EF40.idx  imconfig.h.DA670C1B284FEF58.idx  imgui.cpp.80FE124A1F18BC03.idx  imgui.h.34C095DE10509486.idx  imgui.h.FC7D9AE7129DFEC4.idx  imgui_demo.cpp.063DC21B74A72103.idx  imgui_draw.cpp.4CA3AAC591AAB4F6.idx  imgui_impl_glfw.cpp.9DC65F1E5CB42C9F.idx  imgui_impl_glfw.cpp.F59337C6B0B2787B.idx  imgui_impl_glfw.h.1CF4D7F442F2BF20.idx  imgui_impl_glfw.h.56E9F4323C64EFE3.idx  imgui_impl_glfw.h.D3822657D05FF6F7.idx  imgui_impl_metal.h.EF5480D2BAB1A822.idx  imgui_impl_opengl2.h.53FACDF60C6DA1E1.idx  imgui_impl_opengl3.cpp.12D467B49C1AF067.idx  imgui_impl_opengl3.cpp.16E29C08A1D48BAC.idx  imgui_impl_opengl3.h.20CDA0A9CD6B22F4.idx  imgui_impl_opengl3.h.B732E911DFC23E84.idx  imgui_impl_opengl3_loader.h.7ED93B339441378A.idx  imgui_internal.h.A80FD8A04E06F206.idx  imgui_tables.cpp.F3FD671E87C41718.idx  imgui_widgets.cpp.172FA6CD65DE9F18.idx  imstb_rectpack.h.1D346B522BAC0852.idx  imstb_textedit.h.0BF43C3E04D435EE.idx  imstb_truetype.h.46375B3723898CEC.idx  inventoryManagement.cpp.583362D4F7BCDF87.idx  inventoryManagement.cpp.9BDF5688131C9508.idx  inventoryManagement.h.2208B7CD159BBA77.idx  inventoryManagement.h.880672B32B9D3747.idx  main.cpp.62F84273B00E2ED0.idx  (+7 more)
lib/bcrypt/: CMakeLists.txt
lib/imgui/: Makefile  cpp  demo_app  imgui.ini  imgui_demo.cpp  imgui_impl_glfw.cpp
